--- a/src/page-components/About/About.css
+++ b/src/page-components/About/About.css
@@ -6,13 +6,13 @@
     flex-grow: 1;
 }
 
-.About .text > div {
+.About .text>div {
     margin: 6px 0;
 }
 
 .About .trace-under, .About .trace-around {
     border-style: solid;
-    border-color: #b6d094;
+    border-color: #b5777e;
 }
 
 .About .no-border {
@@ -25,8 +25,9 @@
 
 .About .trace-right {
     border-right-width: 2px;
-    padding-top:12px;
+    padding-top: 12px;
 }
+
 .About .trace-around {
     padding: 2px;
     border-width: 2px;
@@ -63,4 +64,52 @@
 
 .About .spacer {
     height: 12px;
+}
+
+.About h1 {
+    margin-bottom: 0;
+}
+
+.About .social {
+    margin-bottom: 16px;
+    display: flex;
+}
+
+.About .social>a {
+    margin-left: 6px;
+    display: block;
+    padding-right: 6px;
+    border-right: 2px solid #fffdfb;
+}
+
+.About .social>a:first-child {
+    margin-left: 0;
+}
+
+.About .social>a:last-child {
+    padding-right: 0;
+    border-right: 0;
+}
+
+@media screen and (max-width: 615px) {
+    .About .chart {
+        width: 100%;
+        height: 350px;
+    }
+    .About .half {
+        width: 98%;
+    }
+    .About .body {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .About .trace-under {
+        border-bottom-width: 0;
+    }
+    .About .aside {
+        display: none;
+    }
+    .About .me {
+        align-self: center;
+    }
 }
