--- a/src/components/Talk/Talk.css
+++ b/src/components/Talk/Talk.css
@@ -1,6 +1,6 @@
 .Talk {
-    width: 240px;
-    height: 200px;
+    width: 350px;
+    height: 170px;
     background-color: #2e2836;
     padding: 12px;
     border-radius: 6px;
@@ -23,6 +23,11 @@
     text-transform: uppercase;
     font-size: 1em;
     margin-bottom: 0px;
+}
+
+.Talk .icon {
+    margin-right: 6px;
+    font-size:1.5em;
 }
 
 .Talk .date {
